# incidental-cxx

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmarks/: coro_dfs.cpp
benchmarks/algo/: closest_points.cpp  stable_sort.cpp
benchmarks/hash/: map.cpp
cmake/: asan.cmake  benchmarks.cmake  boost.cmake  codegen.cmake  debug-macros.cmake  deps.cmake  eigen.cmake  examples.cmake  fmt.cmake  main.cmake  release.cmake  robin_hood_header.cmake  unit-tests.cmake
codegen/: README.md  common.py
codegen/argparse/: run.py
codegen/argparse/parsers/: example-schema.yaml
codegen/argparse/templates/: parser.cpp.jinja  parser.hpp.jinja
codegen/debug/: config.yaml  debug.cpp.jinja  debug.hpp.jinja  run.py
examples/: hello_tty.cpp
stash/: clang_format_all.sh  colorize.py  format.sh  init_main.sh  install-precommit-hook.sh  main.cpp  pre-commit-hook.sh  reset_main.sh  run_all_benchmarks.py  run_codegen.py  walk.py
ulib/: CMakeLists.txt  README.md
ulib/include/algo/: closest_points.hpp  stable_sort.hpp
ulib/include/bitmask/: bitmask.hpp
ulib/include/color_tty/: marker.hpp
ulib/include/coro/: single_pass.hpp
ulib/include/debug/: lap.hpp  macros.hpp  to_string.hpp
ulib/include/exec/: runner.hpp
ulib/include/traits/: concepts.hpp
ulib/include/uhash/: hasher.hpp  map.hpp
ulib/include/urand/: uniform.hpp
ulib/include/utils/: coro.hpp  dumb_arg_parser.hpp  fs.hpp  none.hpp  str.hpp  variant.hpp
ulib/src/algo/: closest_points.cpp
ulib/src/bitmask/: bitmask.cpp
ulib/src/color_tty/: marker.cpp
ulib/src/common/: to_string.cpp
ulib/src/debug/: lap.cpp
ulib/src/exec/: runner.cpp
ulib/src/utils/: dumb_arg_parser.cpp  fs.cpp  str.cpp
unit-tests/: argparse_codegen.cpp  bitmask.cpp  closest_points.cpp  debug_log.cpp  single_pass.cpp  stable_sort.cpp  to_string.cpp  uniform.cpp
unit-tests/toy/: README.md  list_shift.cpp  precedence_climbing.cpp
